--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Functional Library Lite</title>
 </head>
 <body>
-  
+  <h1>Welcome to Functional Library Lite<sup>TM</sup></h1>
 </body>
 <script type="text/javascript" src="index.js"></script>
 </html>
